wave_fixes-01: fixed headers and contrast errors

--- a/cs464-group-project/src/style/Home/Home.css
+++ b/cs464-group-project/src/style/Home/Home.css
@@ -50,7 +50,3 @@ h1 .league-logo {
     width: 250px;
   }
 }
-
-[class^='col'] {
-  border: 1px solid;
-}
